REST: Attempt to fix codestyle to make it less painful to read.